[gd_scene load_steps=4 format=3 uid="uid://v40couwff1ho"]

[ext_resource type="Script" path="res://scenes/ListeningUI/past_folklore.gd" id="1_xuva4"]
[ext_resource type="Texture2D" uid="uid://gsiviwjkuudk" path="res://assets/images/cloud-download.png" id="2_q6r16"]
[ext_resource type="PackedScene" uid="uid://d1iraws8mnyw6" path="res://scenes/APIClient/ClientWrappers/get_past_folklore.tscn" id="6_7nrum"]

[node name="PastFolklore" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xuva4")
current_state = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Title"

[node name="DownloadButton" type="TextureButton" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_q6r16")
stretch_mode = 5

[node name="GetPastFolklore" parent="." instance=ExtResource("6_7nrum")]

[node name="S3GetRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/DownloadButton" to="." method="_on_download_button_pressed"]
[connection signal="request_failed" from="GetPastFolklore" to="." method="_on_get_past_folklore_request_failed"]
[connection signal="url_received" from="GetPastFolklore" to="." method="_on_get_past_folklore_url_received"]
[connection signal="request_completed" from="S3GetRequest" to="." method="_on_s_3_get_request_request_completed"]
